SmartHomeDesktop/include/vpx/vpx_encoder.h

    the stream (no future frame depends on
                this one) */
#define VPX_FRAME_IS_INVISIBLE 0x4 
    const vpx_image_t *vpx_codec_get_preview_frame(vpx_codec_ctx_t   *ctx);