SmartHomeDesktop/src/vpx/VpxLibrary.java

	@Ptr 
	synchronized protected native static long vpx_codec_get_preview_frame(@Ptr long ctx);
	/**
	 * \brief Initialize a decoder instance<br>
	 * * Initializes a decoder context using the given interface. Applications<br>
	 * should call the vpx_codec_dec_init convenience macro instead of this<br>
	 * function directly, to ensure that the ABI version number parameter<br>
	 * is properly initialized.<br>
	 * * If the library was configured with --disable-multithread, this call<br>
	 * is not thread safe and should be guarded with a lock if being used<br>
	 * in a multithreaded context.<br>
	 * * In XMA mode (activated by setting VPX_CODEC_USE_XMA in the flags<br>
	 * parameter), the storage pointed to by the cfg parameter must be<br>
	 * kept readable and stable until all memory maps have been set.<br>
	 * * \param[in]    ctx     Pointer to this instance's context.<br>
	 * \param[in]    iface   Pointer to the algorithm interface to use.<br>
	 * \param[in]    cfg     Configuration to use, if known. May be NULL.<br>
	 * \param[in]    flags   Bitfield of VPX_CODEC_USE_* flags<br>
	 * \param[in]    ver     ABI version number. Must be set to<br>
	 *                       VPX_DECODER_ABI_VERSION<br>
	 * \retval #VPX_CODEC_OK<br>
	 *     The decoder algorithm initialized.<br>
	 * \retval #VPX_CODEC_MEM_ERROR<br>
	 *     Memory allocation failed.<br>
	 * Original signature : <code>vpx_codec_err_t vpx_codec_dec_init_ver(vpx_codec_ctx_t*, vpx_codec_iface_t*, vpx_codec_dec_cfg_t*, vpx_codec_flags_t, int)</code><br>
	 * <i>native declaration : vpx\vpx_decoder.h:129</i>
	 */
	synchronized public static IntValuedEnum<VpxLibrary.vpx_codec_err_t > vpx_codec_dec_init_ver(Pointer<vpx_codec_ctx_t > ctx, Pointer<VpxLibrary.vpx_codec_iface > iface, Pointer<vpx_codec_dec_cfg_t > cfg, @CLong long flags, int ver) {
		return FlagSet.fromValue(vpx_codec_dec_init_ver(Pointer.getPeer(ctx), Pointer.getPeer(iface), Pointer.getPeer(cfg), flags, ver), VpxLibrary.vpx_codec_err_t.class);
	}
	synchronized protected native static int vpx_codec_dec_init_ver(@Ptr long ctx, @Ptr long iface, @Ptr long cfg, @CLong long flags, int ver);
	/**
	 * \brief Parse stream info from a buffer<br>
	 * * Performs high level parsing of the bitstream. Construction of a decoder<br>
	 * context is not necessary. Can be used to determine if the bitstream is<br>
	 * of the proper format, and to extract information from the stream.<br>
	 * * \param[in]      iface   Pointer to the algorithm interface<br>
	 * \param[in]      data    Pointer to a block of data to parse<br>
	 * \param[in]      data_sz Size of the data buffer<br>
	 * \param[in,out]  si      Pointer to stream info to update. The size member<br>
	 *                         \ref MUST be properly initialized, but \ref MAY be<br>
	 *                         clobbered by the algorithm. This parameter \ref MAY<br>
	 *                         be NULL.<br>
	 * * \retval #VPX_CODEC_OK<br>
	 *     Bitstream is parsable and stream information updated<br>
	 * Original signature : <code>vpx_codec_err_t vpx_codec_peek_stream_info(vpx_codec_iface_t*, const uint8_t*, unsigned int, vpx_codec_stream_info_t*)</code><br>
	 * <i>native declaration : vpx\vpx_decoder.h:160</i>
	 */
	synchronized public static IntValuedEnum<VpxLibrary.vpx_codec_err_t > vpx_codec_peek_stream_info(Pointer<VpxLibrary.vpx_codec_iface > iface, Pointer<Byte > data, int data_sz, Pointer<vpx_codec_stream_info_t > si) {
		return FlagSet.fromValue(vpx_codec_peek_stream_info(Pointer.getPeer(iface), Pointer.getPeer(data), data_sz, Pointer.getPeer(si)), VpxLibrary.vpx_codec_err_t.class);
	}
	synchronized protected native static int vpx_codec_peek_stream_info(@Ptr long iface, @Ptr long data, int data_sz, @Ptr long si);
	/**
	 * \brief Return information about the current stream.<br>
	 * * Returns information about the stream that has been parsed during decoding.<br>
	 * * \param[in]      ctx     Pointer to this instance's context<br>
	 * \param[in,out]  si      Pointer to stream info to update. The size member<br>
	 *                         \ref MUST be properly initialized, but \ref MAY be<br>
	 *                         clobbered by the algorithm. This parameter \ref MAY<br>
	 *                         be NULL.<br>
	 * * \retval #VPX_CODEC_OK<br>
	 *     Bitstream is parsable and stream information updated<br>
	 * Original signature : <code>vpx_codec_err_t vpx_codec_get_stream_info(vpx_codec_ctx_t*, vpx_codec_stream_info_t*)</code><br>
	 * <i>native declaration : vpx\vpx_decoder.h:179</i>
	 */
	synchronized public static IntValuedEnum<VpxLibrary.vpx_codec_err_t > vpx_codec_get_stream_info(Pointer<vpx_codec_ctx_t > ctx, Pointer<vpx_codec_stream_info_t > si) {
		return FlagSet.fromValue(vpx_codec_get_stream_info(Pointer.getPeer(ctx), Pointer.getPeer(si)), VpxLibrary.vpx_codec_err_t.class);
	}
	synchronized protected native static int vpx_codec_get_stream_info(@Ptr long ctx, @Ptr long si);
	/**
	 * \brief Decode data<br>
	 * * Processes a buffer of coded data. If the processing results in a new<br>
	 * decoded frame becoming available, PUT_SLICE and PUT_FRAME events may be<br>
	 * generated, as appropriate. Encoded data \ref MUST be passed in DTS (decode<br>
	 * time stamp) order. Frames produced will always be in PTS (presentation<br>
	 * time stamp) order.<br>
	 * If the decoder is configured with VPX_CODEC_USE_INPUT_FRAGMENTS enabled,<br>
	 * data and data_sz can contain a fragment of the encoded frame. Fragment<br>
	 * \#n must contain at least partition \#n, but can also contain subsequent<br>
	 * partitions (\#n+1 - \#n+i), and if so, fragments \#n+1, .., \#n+i must<br>
	 * be empty. When no more data is available, this function should be called<br>
	 * with NULL as data and 0 as data_sz. The memory passed to this function<br>
	 * must be available until the frame has been decoded.<br>
	 * * \param[in] ctx          Pointer to this instance's context<br>
	 * \param[in] data         Pointer to this block of new coded data. If<br>
	 *                         NULL, a VPX_CODEC_CB_PUT_FRAME event is posted<br>
	 *                         for the previously decoded frame.<br>
	 * \param[in] data_sz      Size of the coded data, in bytes.<br>
	 * \param[in] user_priv    Application specific data to associate with<br>
	 *                         this frame.<br>
	 * \param[in] deadline     Soft deadline the decoder should attempt to meet,<br>
	 *                         in us. Set to zero for unlimited.<br>
	 * * \return Returns #VPX_CODEC_OK if the coded data was processed completely<br>
	 *         and future pictures can be decoded without error. Otherwise,<br>
	 *         see the descriptions of the other error codes in ::vpx_codec_err_t<br>
	 *         for recoverability capabilities.<br>
	 * Original signature : <code>vpx_codec_err_t vpx_codec_decode(vpx_codec_ctx_t*, const uint8_t*, unsigned int, void*, long)</code><br>
	 * <i>native declaration : vpx\vpx_decoder.h:213</i>
	 */
	synchronized public static IntValuedEnum<VpxLibrary.vpx_codec_err_t > vpx_codec_decode(Pointer<vpx_codec_ctx_t > ctx, Pointer<Byte > data, int data_sz, Pointer<? > user_priv, @CLong long deadline) {
		return FlagSet.fromValue(vpx_codec_decode(Pointer.getPeer(ctx), Pointer.getPeer(data), data_sz, Pointer.getPeer(user_priv), deadline), VpxLibrary.vpx_codec_err_t.class);
	}
	synchronized protected native static int vpx_codec_decode(@Ptr long ctx, @Ptr long data, int data_sz, @Ptr long user_priv, @CLong long deadline);
	/**
	 * \brief Decoded frames iterator<br>
	 * * Iterates over a list of the frames available for display. The iterator<br>
	 * storage should be initialized to NULL to start the iteration. Iteration is<br>
	 * complete when this function returns NULL.<br>
	 * * The list of available frames becomes valid upon completion of the<br>
	 * vpx_codec_decode call, and remains valid until the next call to vpx_codec_decode.<br>
	 * * \param[in]     ctx      Pointer to this instance's context<br>
	 * \param[in,out] iter     Iterator storage, initialized to NULL<br>
	 * * \return Returns a pointer to an image, if one is ready for display. Frames<br>
	 *         produced will always be in PTS (presentation time stamp) order.<br>
	 * Original signature : <code>vpx_image_t* vpx_codec_get_frame(vpx_codec_ctx_t*, vpx_codec_iter_t*)</code><br>
	 * <i>native declaration : vpx\vpx_decoder.h:235</i>
	 */
	synchronized public static Pointer<vpx_image_t > vpx_codec_get_frame(Pointer<vpx_codec_ctx_t > ctx, Pointer<Pointer<? > > iter) {
		return Pointer.pointerToAddress(vpx_codec_get_frame(Pointer.getPeer(ctx), Pointer.getPeer(iter)), vpx_image_t.class);
	}
	@Ptr 
	synchronized protected native static long vpx_codec_get_frame(@Ptr long ctx, @Ptr long iter);
	/**
	 * \brief Register for notification of frame completion.<br>
	 * * Registers a given function to be called when a decoded frame is<br>
	 * available.<br>
	 * * \param[in] ctx          Pointer to this instance's context<br>
	 * \param[in] cb           Pointer to the callback function<br>
	 * \param[in] user_priv    User's private data<br>
	 * * \retval #VPX_CODEC_OK<br>
	 *     Callback successfully registered.<br>
	 * \retval #VPX_CODEC_ERROR<br>
	 *     Decoder context not initialized, or algorithm not capable of<br>
	 *     posting slice completion.<br>
	 * Original signature : <code>vpx_codec_err_t vpx_codec_register_put_frame_cb(vpx_codec_ctx_t*, vpx_codec_put_frame_cb_fn_t, void*)</code><br>
	 * <i>native declaration : vpx\vpx_decoder.h:272</i>
	 */
	synchronized public static IntValuedEnum<VpxLibrary.vpx_codec_err_t > vpx_codec_register_put_frame_cb(Pointer<vpx_codec_ctx_t > ctx, Pointer<VpxLibrary.vpx_codec_put_frame_cb_fn_t > cb, Pointer<? > user_priv) {
		return FlagSet.fromValue(vpx_codec_register_put_frame_cb(Pointer.getPeer(ctx), Pointer.getPeer(cb), Pointer.getPeer(user_priv)), VpxLibrary.vpx_codec_err_t.class);
	}
	synchronized protected native static int vpx_codec_register_put_frame_cb(@Ptr long ctx, @Ptr long cb, @Ptr long user_priv);
	/**
	 * \brief Register for notification of slice completion.<br>
	 * * Registers a given function to be called when a decoded slice is<br>
	 * available.<br>
	 * * \param[in] ctx          Pointer to this instance's context<br>
	 * \param[in] cb           Pointer to the callback function<br>
	 * \param[in] user_priv    User's private data<br>
	 * * \retval #VPX_CODEC_OK<br>
	 *     Callback successfully registered.<br>
	 * \retval #VPX_CODEC_ERROR<br>
	 *     Decoder context not initialized, or algorithm not capable of<br>
	 *     posting slice completion.<br>
	 * Original signature : <code>vpx_codec_err_t vpx_codec_register_put_slice_cb(vpx_codec_ctx_t*, vpx_codec_put_slice_cb_fn_t, void*)</code><br>
	 * <i>native declaration : vpx\vpx_decoder.h:314</i>
	 */
	synchronized public static IntValuedEnum<VpxLibrary.vpx_codec_err_t > vpx_codec_register_put_slice_cb(Pointer<vpx_codec_ctx_t > ctx, Pointer<VpxLibrary.vpx_codec_put_slice_cb_fn_t > cb, Pointer<? > user_priv) {
		return FlagSet.fromValue(vpx_codec_register_put_slice_cb(Pointer.getPeer(ctx), Pointer.getPeer(cb), Pointer.getPeer(user_priv)), VpxLibrary.vpx_codec_err_t.class);
	}
	synchronized protected native static int vpx_codec_register_put_slice_cb(@Ptr long ctx, @Ptr long cb, @Ptr long user_priv);
	/**
	 * Original signature : <code>vpx_codec_err_t vpx_codec_control_VP8_SET_REFERENCE(vpx_codec_ctx_t*, int, vpx_ref_frame_t*)</code><br>
	 * <i>native declaration : vpx\vp8.h:110</i>
	 */
	synchronized public static IntValuedEnum<VpxLibrary.vpx_codec_err_t > vpx_codec_control_VP8_SET_REFERENCE(Pointer<vpx_codec_ctx_t > vpx_codec_ctx_tPtr1, int int1, Pointer<vpx_ref_frame_t > vpx_ref_frame_tPtr1) {
		return FlagSet.fromValue(vpx_codec_control_VP8_SET_REFERENCE(Pointer.getPeer(vpx_codec_ctx_tPtr1), int1, Pointer.getPeer(vpx_ref_frame_tPtr1)), VpxLibrary.vpx_codec_err_t.class);
	}
